--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div id="container">
         <div class="search-bar">
             <input type="text" id="search" placeholder="Search for a city">
-            <button id="search-btn">Search</button>
+            <button id="search-btn">SEARCH</button>
         </div>
         <div class="content">
-            <h1 id="city-name">Rennes</h1>
+            <h1 id="city-name">City name</h1>
             <div class="meteo-infos">
                 <img src="https://picsum.photos/200" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dignissimos, ipsa cupiditate veniam minus totam nostrum fugiat veritatis, itaque sit necessitatibus commodi porro harum possimus distinctio nisi nobis consectetur sint aut ea at laboriosam quos explicabo architecto. Nisi, porro autem!</p>
