feat: search-bar API call
The search-bar now calls the city info API

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <title>Instant-Weather</title>
     <script src="script/app.js" defer="true"></script>
 </head>
+
 <body>
     <div id="container">
         <div class="search-bar">
@@ -18,9 +20,13 @@
             <h1 id="city-name">City name</h1>
             <div class="meteo-infos">
                 <img src="https://picsum.photos/200" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dignissimos, ipsa cupiditate veniam minus totam nostrum fugiat veritatis, itaque sit necessitatibus commodi porro harum possimus distinctio nisi nobis consectetur sint aut ea at laboriosam quos explicabo architecto. Nisi, porro autem!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dignissimos, ipsa cupiditate veniam
+                    minus totam nostrum fugiat veritatis, itaque sit necessitatibus commodi porro harum possimus
+                    distinctio nisi nobis consectetur sint aut ea at laboriosam quos explicabo architecto. Nisi, porro
+                    autem!</p>
             </div>
         </div>
     </div>
 </body>
+
 </html>
