--- a/index.html
+++ b/index.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
 <html lang="fr">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style/style.css" />
+        <link
+            rel="shortcut icon"
+            href="assets/favicon.ico"
+            type="image/x-icon"
+        />
+        <title>Instant-Weather</title>
+        <script src="script/app.js" defer="true"></script>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <title>Instant-Weather</title>
-    <script src="script/app.js" defer="true"></script>
-</head>
-
-<body>
-    <div id="container">
-        <div class="search-bar">
-            <input type="text" id="search" placeholder="Search for a city">
-            <button id="search-btn">SEARCH</button>
-        </div>
-        <div class="content">
-            <h1 id="city-name">City name</h1>
-            <div class="meteo-infos">
-                <img src="https://picsum.photos/200" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dignissimos, ipsa cupiditate veniam
-                    minus totam nostrum fugiat veritatis, itaque sit necessitatibus commodi porro harum possimus
-                    distinctio nisi nobis consectetur sint aut ea at laboriosam quos explicabo architecto. Nisi, porro
-                    autem!</p>
+    <body>
+        <div id="container">
+            <div id="search-container">
+                <div class="search-bar">
+                    <input
+                        type="text"
+                        id="search"
+                        placeholder="Search for a city"
+                    />
+                    <button id="search-btn">SEARCH</button>
+                </div>
+                <div id="cityGuesses"></div>
+            </div>
+            <div class="content">
+                <h1 id="city-name">City name</h1>
+                <div class="meteo-infos">
+                    <img src="https://picsum.photos/200" alt="" />
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Impedit dignissimos, ipsa cupiditate veniam minus totam
+                        nostrum fugiat veritatis, itaque sit necessitatibus
+                        commodi porro harum possimus distinctio nisi nobis
+                        consectetur sint aut ea at laboriosam quos explicabo
+                        architecto. Nisi, porro autem!
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
-</body>
-
+    </body>
 </html>
