feat: search icon changed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         id="search"
                         placeholder="Search for a city"
                     />
-                    <button id="search-btn"><img src="assets/img/search-icon.svg" alt="Search icon"></button>
+                    <button id="search-btn"><img src="assets/img/search-settings-icon.svg" alt="Search icon"></button>
                 </div>
                 <div id="cityGuesses"></div>
             </div>
