feat: settings are now stored in localStorage and displayed accordingly

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         id="wind-direction"
                     />
                 </div>
-                <button type="submit">Submit</button>
+                <button type="submit">Save</button>
             </form>
         </div>
         <div id="container">
