feat: meteo display skeleton

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         />
         <title>Instant-Weather</title>
         <script src="script/app.js" defer="true"></script>
+        <script src="https://kit.fontawesome.com/796ab93bf0.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -18,7 +19,9 @@
             <form action="javascript:updateSearchSettings()">
                 <h2>Search settings</h2>
                 <div class="setting">
-                    <label id="forecast-duration-label" for="forecast-duration">Forecast duration : </label>
+                    <label id="forecast-duration-label" for="forecast-duration"
+                        >Forecast duration :
+                    </label>
                     <input
                         type="range"
                         min="1"
@@ -81,15 +84,131 @@
             <div class="content">
                 <h1 id="city-name">City name</h1>
                 <div class="meteo-infos">
-                    <img src="https://picsum.photos/200" alt="" />
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Impedit dignissimos, ipsa cupiditate veniam minus totam
-                        nostrum fugiat veritatis, itaque sit necessitatibus
-                        commodi porro harum possimus distinctio nisi nobis
-                        consectetur sint aut ea at laboriosam quos explicabo
-                        architecto. Nisi, porro autem!
-                    </p>
+                    <div class="pack currentWeather">
+                        <h3>Current weather</h3>
+                        <div class="card">
+                            <img src="assets/img/weather_icons/cloudy-day-1.svg" alt="Weather icon">
+                            <table>
+                                <tr>
+                                    <td><span class="tempMax">25°</span> <i class="fa-solid fa-temperature-arrow-up"></i></td>
+                                    <td><span class="tempMin">17°</span> <i class="fa-solid fa-temperature-arrow-down"></i></td>
+                                </tr>
+                                <tr>
+                                    <td><span class="probRain">60%</span> <i class="fa-solid fa-droplet"></i></td>
+                                    <td><span class="sunDuration">4h</span> <i class="fa-solid fa-sun"></i></td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="pack hourly-forecast">
+                        <h3>Hourly forecast</h3>
+                        <div class="card">
+
+                        </div>
+                    </div>
+                    <div class="pack days-forecast">
+                        <h3>n-days forecast</h3>
+                        <div class="card">
+                            <div class="day-forecast">
+                                <p class="day"></p>
+                                <img src="" alt="">
+                                <table>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="day-forecast">
+                                <p class="day"></p>
+                                <img src="" alt="">
+                                <table>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="day-forecast">
+                                <p class="day"></p>
+                                <img src="" alt="">
+                                <table>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="day-forecast">
+                                <p class="day"></p>
+                                <img src="" alt="">
+                                <table>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="day-forecast">
+                                <p class="day"></p>
+                                <img src="" alt="">
+                                <table>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="day-forecast">
+                                <p class="day"></p>
+                                <img src="" alt="">
+                                <table>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="day-forecast">
+                                <p class="day"></p>
+                                <img src="" alt="">
+                                <table>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
