fix: minor style changes

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div id="cityGuesses"></div>
             </div>
 
-            <div class="content">
+            <div class="content hidden">
                 <h1 id="city-name">City name</h1>
                 <div class="meteo-infos">
                     <div class="pack currentWeather">
