--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
                 <button type="submit">Save</button>
             </form>
         </div>
+        <div class="hidden" id="infoMessageContainer">
+            <div class="message">
+                <h3></h3>
+                <p></p>
+                <button>OK</button>
+            </div>
+        </div>
         <div id="container">
             <div id="search-container">
                 <div class="search-bar">
