feat: animation when results appear

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                <img src="assets/img/loading-icon.svg" alt="Loading icon" class="loading-icon">
             </div>
             
-            <div class="content" style="display: none;">
+            <div class="content">
                 <h1 id="city-name">City name</h1>
                 <div class="meteo-infos">
                     <div class="pack currentWeather">
