feat: favicon added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style/style.css" />
         <link
             rel="shortcut icon"
-            href="assets/favicon.ico"
+            href="assets/img/favicon.ico"
             type="image/x-icon"
         />
         <title>Instant-Weather</title>
