--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instant-Weather</title>
 </head> 
-<body>
+<body> si tu li ca t con
     
 </body>
 </html>
