--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         nostrum fugiat veritatis, itaque sit necessitatibus
                         commodi porro harum possimus distinctio nisi nobis
                         consectetur sint aut ea at laboriosam quos explicabo
-                        architecto. Nisi, porro autem!
+                        architecto. Nisi, autem!
                     </p>
                 </div>
             </div>
