feat: API request works

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         Impedit dignissimos, ipsa cupiditate veniam minus totam
                         nostrum fugiat veritatis, itaque sit necessitatibus
                         commodi porro harum possimus distinctio nisi nobis
-                        consectetur sint ea at laboriosam quos explicabo
+                        consectetur sint aut ea at laboriosam quos explicabo
                         architecto. Nisi, porro autem!
                     </p>
                 </div>
