feat: meteo display skeleton

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Impedit dignissimos, ipsa cupiditate veniam minus totam
-                        nostrum fugiat veritatis, sit necessitatibus
+                        nostrum fugiat veritatis, itaque sit necessitatibus
                         commodi porro harum possimus distinctio nisi nobis
                         consectetur sint aut ea at laboriosam quos explicabo
                         architecto. Nisi, porro autem!
