--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Impedit dignissimos, cupiditate veniam minus totam
                         nostrum fugiat veritatis, itaque sit necessitatibus
-                        commodi porro harum possimus distinctio nisi nobis
+                        commodi porro harum possimus nisi nobis
                         consectetur sint aut ea at laboriosam quos explicabo
                         architecto. Nisi, porro autem!
                     </p>
