feat: the page display an error message when the city's meteo is unavailable

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <img src="https://picsum.photos/200" alt="" />
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Impedit dignissimos, cupiditate veniam minus totam
+                        Impedit dignissimos, ipsa cupiditate veniam minus totam
                         nostrum fugiat veritatis, itaque sit necessitatibus
                         commodi porro harum possimus distinctio nisi nobis
                         consectetur sint aut ea at laboriosam quos explicabo
