--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
                     </div>
                     <div class="pack hourly-forecast">
                         <h3>Hourly forecast</h3>
-                        <div class="card"></div>
+                        <div class="card">
+							
+                        </div>
                     </div>
                     <div class="pack days-forecast">
                         <h3>n-days forecast</h3>
