--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     />
                 </div>
                 <button type="submit">Save</button>
+                <p class="AdditionalInfos">Click on a card to see additional informations</p>
             </form>
         </div>
         <div class="hidden" id="infoMessageContainer">
