feat: icons are changing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             type="image/x-icon"
         />
         <title>Instant-Weather</title>
-        <script src="script/app.js" defer="true"></script>
+        <script type="module" src="script/app.js" defer="true"></script>
         <script
             src="https://kit.fontawesome.com/796ab93bf0.js"
             crossorigin="anonymous"
@@ -105,7 +105,7 @@
                             <h4>Friday 21</h4>
                             <div>
                                 <img
-                                    src="assets/img/weather_icons/cloudy-day-1.svg"
+                                    src="assets/img/icons/clear-day.svg"
                                     alt="Weather icon"
                                 />
                                 <table>
