--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="meteo-infos">
                     <div class="pack currentWeather">
                         <h3>Current weather</h3>
-                        <div class="card">
+                        <div class="card daily-card">
                             <h4>Friday 21</h4>
                             <div>
                                 <img
@@ -151,6 +151,15 @@
                         </div>
                     </div>
                 </div>
+                <footer>
+                    <p>
+                        Made with <i class="fa-solid fa-heart" style="color: whitesmoke"></i> by
+                        <span class="footerLink"><a href="https://github.com/AlensoLopes" target="_blank">Alenso Lopes</a></span>, 
+                        <span class="footerLink"><a href="https://github.com/LucBUTGH" target="_blank">Luc Leveque</a></span>, 
+                        <span class="footerLink"><a href="https://github.com/moustave" target="_blank">Guillaume Bergerot</a></span> and 
+                        <span class="footerLink"><a href="https://github.com/juliensailly" target="_blank">Julien Sailly</a></span>
+                    </p>
+                </footer>
             </div>
         </div>
     </body>
