--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                     />
                 </div>
                 <button type="submit" id="settingsSaveButton">Save</button>
-                <p class="AdditionalInfos">Click on a card to see additional informations</p>
+                <p class="AdditionalInfos">
+                    Click on a card to see additional informations
+                </p>
             </form>
         </div>
         <div class="hidden" id="infoMessageContainer">
@@ -93,9 +95,13 @@
             </div>
 
             <div class="loading-icon">
-               <img src="assets/img/loading-icon.svg" alt="Loading icon" class="loading-icon">
+                <img
+                    src="assets/img/loading-icon.svg"
+                    alt="Loading icon"
+                    class="loading-icon"
+                />
             </div>
-            
+
             <div class="content">
                 <h1 id="city-name">City name</h1>
                 <div class="meteo-infos">
@@ -140,24 +146,51 @@
                     <div class="pack hourly-forecast">
                         <h3>Hourly forecast</h3>
                         <div class="card">
-                            <div id="tCurve">
-                                
-                            </div>
+                            <div id="tCurve"></div>
                         </div>
                     </div>
                     <div class="pack days-forecast">
                         <h3>n-days forecast</h3>
-                        <div class="card">
-                        </div>
+                        <div class="card"></div>
                     </div>
                 </div>
                 <footer>
                     <p>
-                        Made with <i class="fa-solid fa-heart" style="color: whitesmoke"></i> by
-                        <span class="footerLink"><a href="https://github.com/AlensoLopes" target="_blank">Alenso Lopes</a></span>, 
-                        <span class="footerLink"><a href="https://github.com/LucBUTGH" target="_blank">Luc Leveque</a></span>, 
-                        <span class="footerLink"><a href="https://github.com/moustave" target="_blank">Guillaume Bergerot</a></span> and 
-                        <span class="footerLink"><a href="https://github.com/juliensailly" target="_blank">Julien Sailly</a></span>
+                        Made with
+                        <i
+                            class="fa-solid fa-heart"
+                            style="color: whitesmoke"
+                        ></i>
+                        by
+                        <span class="footerLink"
+                            ><a
+                                href="https://github.com/AlensoLopes"
+                                target="_blank"
+                                >Alenso Lopes</a
+                            ></span
+                        >,
+                        <span class="footerLink"
+                            ><a
+                                href="https://github.com/LucBUTGH"
+                                target="_blank"
+                                >Luc Leveque</a
+                            ></span
+                        >,
+                        <span class="footerLink"
+                            ><a
+                                href="https://github.com/moustave"
+                                target="_blank"
+                                >Guillaume Bergerot</a
+                            ></span
+                        >
+                        and
+                        <span class="footerLink"
+                            ><a
+                                href="https://github.com/juliensailly"
+                                target="_blank"
+                                >Julien Sailly</a
+                            ></span
+                        >
                     </p>
                 </footer>
             </div>
