feat: minor style changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             href="assets/img/favicon.ico"
             type="image/x-icon"
         />
-        <title>Instant-Weather</title>
+        <title>Instant-Weather ⛅</title>
         <script type="module" src="script/app.js" defer="true"></script>
         <script
             src="https://kit.fontawesome.com/796ab93bf0.js"
