feat: meteo icons added to the hourly forecast curve

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                         type="text"
                         id="search"
                         placeholder="Search for a city name or a postal code"
+                        autocomplete="off"
                     />
                     <button id="search-btn">
                         <img
@@ -154,6 +155,7 @@
                         <div class="card"></div>
                     </div>
                 </div>
+                <hr>
                 <footer>
                     <p>
                         Made with
