--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style/style.css" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style/style.css">
         <link
             rel="shortcut icon"
             href="assets/img/favicon.ico"
             type="image/x-icon"
-        />
-        <title>Instant-Weather ⛅</title>
-        <script type="module" src="script/app.js" defer="true"></script>
+        >
+        <title>Instant-Weather</title>
         <script
             src="https://kit.fontawesome.com/796ab93bf0.js"
             crossorigin="anonymous"
@@ -30,22 +29,22 @@
                         min="1"
                         max="7"
                         step="1"
-                        default="7"
+                        value="7"
                         name="forecast-duration"
                         id="forecast-duration"
-                    />
+                    >
                 </div>
                 <div class="setting">
                     <label for="latitude">Latitude of the municipality</label>
-                    <input type="checkbox" name="latitude" id="latitude" />
+                    <input type="checkbox" name="latitude" id="latitude">
                 </div>
                 <div class="setting">
                     <label for="longitude">Longitude of the municipality</label>
-                    <input type="checkbox" name="longitude" id="longitude" />
+                    <input type="checkbox" name="longitude" id="longitude">
                 </div>
                 <div class="setting">
                     <label for="rainfall">Total rainfall over the day</label>
-                    <input type="checkbox" name="rainfall" id="rainfall" />
+                    <input type="checkbox" name="rainfall" id="rainfall">
                 </div>
                 <div class="setting">
                     <label for="average-wind">Average wind</label>
@@ -53,7 +52,7 @@
                         type="checkbox"
                         name="average-wind"
                         id="average-wind"
-                    />
+                    >
                 </div>
                 <div class="setting">
                     <label for="wind-direction">Wind direction</label>
@@ -61,7 +60,7 @@
                         type="checkbox"
                         name="wind-direction"
                         id="wind-direction"
-                    />
+                    >
                 </div>
                 <button type="submit" id="settingsSaveButton">Save</button>
                 <p class="AdditionalInfos">
@@ -71,7 +70,7 @@
         </div>
         <div class="hidden" id="infoMessageContainer">
             <div class="message">
-                <h3></h3>
+                <h3>Default title</h3>
                 <p></p>
                 <button>OK</button>
             </div>
@@ -84,12 +83,12 @@
                         id="search"
                         placeholder="Search for a city name or a postal code"
                         autocomplete="off"
-                    />
+                    >
                     <button id="search-btn">
                         <img
                             src="assets/img/search-settings-icon.svg"
                             alt="Search icon"
-                        />
+                        >
                     </button>
                 </div>
                 <div id="cityGuesses"></div>
@@ -100,7 +99,7 @@
                     src="assets/img/loading-icon.svg"
                     alt="Loading icon"
                     class="loading-icon"
-                />
+                >
             </div>
 
             <div class="content">
@@ -114,7 +113,7 @@
                                 <img
                                     src="assets/img/icons/clear-day.svg"
                                     alt="Weather icon"
-                                />
+                                >
                                 <table>
                                     <tr>
                                         <td>
@@ -197,5 +196,6 @@
                 </footer>
             </div>
         </div>
+        <script type="module" src="script/app.js"></script>
     </body>
 </html>
