fix: wcag 2.0 validator passed

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <div id="container">
             <div id="search-container">
                 <div class="search-bar">
+                    <label for="search" style="display: none;">Search-bar</label>
                     <input
                         type="text"
                         id="search"
@@ -103,7 +104,7 @@
             </div>
 
             <div class="content">
-                <h1 id="city-name">City name</h1>
+                <h4 id="city-name">City name</h4>
                 <div class="meteo-infos">
                     <div class="pack currentWeather">
                         <h3>Current weather</h3>
@@ -118,25 +119,25 @@
                                     <tr>
                                         <td>
                                             <span class="tempMax">25°</span>
-                                            <i
+                                            <span
                                                 class="fa-solid fa-temperature-arrow-up"
-                                            ></i>
+                                            ></span>
                                         </td>
                                         <td>
                                             <span class="tempMin">17°</span>
-                                            <i
+                                            <span
                                                 class="fa-solid fa-temperature-arrow-down"
-                                            ></i>
+                                            ></span>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
                                             <span class="probRain">60%</span>
-                                            <i class="fa-solid fa-droplet"></i>
+                                            <span class="fa-solid fa-droplet"></span>
                                         </td>
                                         <td>
                                             <span class="sunDuration">4h</span>
-                                            <i class="fa-solid fa-sun"></i>
+                                            <span class="fa-solid fa-sun"></span>
                                         </td>
                                     </tr>
                                 </table>
@@ -158,10 +159,10 @@
                 <footer>
                     <p>
                         Made with
-                        <i
+                        <span
                             class="fa-solid fa-heart"
                             style="color: whitesmoke"
-                        ></i>
+                        ></span>
                         by
                         <span class="footerLink"
                             ><a
