--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +17,7 @@
     </head>
 
     <body>
+        <!-- Search settings form -->
         <div class="hidden" id="search-settings">
             <form action="javascript:void(0)">
                 <h2>Search settings</h2>
@@ -68,6 +69,7 @@
                 </p>
             </form>
         </div>
+        <!-- Container used to display the additionnal informations and error messages -->
         <div class="hidden" id="infoMessageContainer">
             <div class="message">
                 <h3>Default title</h3>
@@ -75,6 +77,7 @@
                 <button>OK</button>
             </div>
         </div>
+        <!-- Main content -->
         <div id="container">
             <div id="search-container">
                 <div class="search-bar">
@@ -103,6 +106,7 @@
                 >
             </div>
 
+            <!-- Meteo informations -->
             <div class="content">
                 <h4 id="city-name">City name</h4>
                 <div class="meteo-infos">
@@ -156,6 +160,7 @@
                     </div>
                 </div>
                 <hr>
+                <!-- Credits -->
                 <footer>
                     <p>
                         Made with
